# dodoco-launcher

./: .gitignore  .gitmodules  Dodoco.Launcher.sln  LICENSE  README.md  README_pt.md  Reinforced.Typings.settings.xml  dodoco-launcher.csproj
Dodoco.Hooks/Source/: CMakeLists.txt  Log.cpp  StringUtil.cpp  StringUtil.hpp
Dodoco.Hooks/Source/Driver/: CMakeLists.txt  Driver.c  Driver.h
Dodoco.Hooks/Source/Payload/: CMakeLists.txt  Hooks.cpp
Dodoco.Hooks/Source/Starter/: CMakeLists.txt
Source/: CMakeLists.txt  DllInjector.cpp  DllInjector.hpp  Log.cpp  Log.hpp  Process.cpp  Process.hpp  Program.cs  ReinforcedTypingsConfiguration.cs  mingw-w64-x86_64.cmake
Source/Api/Company/: CompanyApi.cs  CompanyApiFactory.cs
Source/Application/: Application.cs  ApplicationConstants.cs  ApplicationException.cs  ApplicationFile.cs  ApplicationLog.cs  ApplicationProgress.cs  ApplicationProgressReport.cs  ApplicationWindow.cs  Program.cs
Source/Application/Control/: GameController.cs  IController.cs  MainController.cs  MainViewData.cs  SettingsController.cs  SettingsViewData.cs  SplashController.cs  SplashViewData.cs  UninitializedEntityException.cs  WineControllerViewData.cs
Source/Application/ReinforcedTypings/: ControllerClassGenerator.cs  ReinforcedTypingsConfiguration.cs
Source/Controller/: LoggerController.cs  ServerSentEvents.cs
Source/Core/: Constants.cs  FormatFile.cs  IStatefulEntity.cs  LogFile.cs  ManagedFile.cs  ProgressReport.cs  ProgressReporter.cs  SerializableManagedFile.cs  WritableManagedFile.cs
Source/Core/Embed/: EmbeddedResourceManager.cs
Source/Core/Game/: Game.cs  GameDeleteFiles.cs  GameDownloadState.cs  GameException.cs  GameHdiffFiles.cs  GameHdiffFilesEntry.cs  GameInstallationManager.cs  GameIntegrityReport.cs  GameManager.cs  GameServer.cs  GameStable.cs  GameState.cs  GameUpdateState.cs  IGame.cs  IMutableGame.cs
Source/Core/Launcher/: ILauncher.cs  Launcher.cs  LauncherBackgroundImage.cs  LauncherConstants.cs  LauncherDependency.cs  LauncherException.cs  LauncherExecutionState.cs  LauncherState.cs
Source/Core/Serialization/: IFormatSerializer.cs  SerializationException.cs
Source/Core/Wine/: IWine.cs  (+4 more)
Source/Driver/: Driver.c
Source/Game/: ForbiddenGameStateException.cs  Game.cs  GameConstants.cs  GameException.cs  GameFileIntegrityState.cs  GameInstallationManager.cs  GameIntegrityReport.cs  GameManager.cs  GamePkgVersionEntry.cs  GameServer.cs  GameStable.cs  GameState.cs  IGame.cs  IMutableGame.cs
Source/HTTP/: DodocoHttpClient.cs
Source/Launcher/: ILauncher.cs  Launcher.cs  LauncherActivityState.cs  LauncherCache.cs  LauncherConstants.cs  LauncherException.cs  LauncherExecutionState.cs  LauncherFile.cs  LauncherLanguage.cs  LauncherSettings.cs
Source/Network/: NetworkException.cs
Source/Payload/: Hooks.cpp  Hooks.hpp  Payload.cpp
Source/ReinforcedTypings/: ControllerClassGenerator.cs  ControllerMethodsGenerator.cs  ReinforcedTypingsConfiguration.cs
Source/Serialization/: IFormatSerializer.cs  SerializationException.cs
Source/Starter/: Starter.cpp
Source/Util/: CultureInfoYamlConverter.cs  Log.cs  LogEntry.cs  LogType.cs  Reflection.cs  Text.cs
(+358 files in other folders)
